--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>chessiitk</title>
   <link rel="stylesheet" href="/src/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/xxmzBrw/fcaef74061bb7a76e5263dfc076c363e.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
 
@@ -25,30 +27,29 @@
 
    
     <header>
-      <div class="logo-wrapper" id="logoWrapper">
-        <span class="dot">.</span>
-        <span class="char" id="cChar"><span class="letter">c</span><img class="icon" src="assets/champion.png" alt="Champion"></span>
-
-        <span class="char" id="hChar"><span class="letter">h</span><img class="icon" src="assets/night.png" alt="Knight"></span>
-
-        <!-- e with bolt icon -->
-        <span class="char" id="eChar"><span class="letter">e</span><img class="icon" src="assets/bolt.png" alt="Bolt"></span>
-
-        <!-- both s replaced by clock -->
-        <span class="char" id="sChar1"><span class="letter">ss</span><img class="icon clock" src="assets/sclock.jpg" alt="Clock"></span>
-
-        <!-- iitk part: each replaced by logo when hovered -->
-        <span class="char iitk"><span class="letter">iitk</span></span>
-      </div>
-    </header>
-
+  <div class="header-inner">
+    <div class="logo-wrapper" style="margin-left:8px;">
+      <span class="green-on-black">.chessiitK</span>
+    </div>
+    <nav class="header-nav">
+      <a href="#" class="nav-tab">Home</a>
+      <a href="#" class="nav-tab">Events</a>
+      <a href="#" class="nav-tab">Team</a>
+      <a href="#" class="nav-tab">About</a>
+      <a href="#" class="nav-tab logo-tab">
+        <img src="/logo.png" alt="Logo" class="nav-logo-img" />
+      </a>
+    </nav>
+  </div>
+</header>
 
     <main>
-      <div class="box gradient-green"></div>
-      <div class="box gradient-red"></div>
-      <div class="box gradient-orange"></div>
-      <div class="box gradient-blue"></div>
-      <div style="height: 2000px;">Scroll down...</div>
+      <!-- 3D King Model -->
+      <model-viewer src="/king.glb" alt="3D King Chess Piece"
+        camera-controls
+        auto-rotate
+        style="width: 300px; height: 300px; margin: 2rem auto; display: block; background: transparent;">
+      </model-viewer>
     </main>
   </div>
 
