--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://codepen.io/GreenSock/pen/xxmzBrw/fcaef74061bb7a76e5263dfc076c363e.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/DrawSVGPlugin.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
@@ -29,7 +30,9 @@
     <header>
   <div class="header-inner">
     <div class="logo-wrapper" style="margin-left:8px;">
-      <span class="green-on-black">.chessiitK</span>
+      <span class="chessiitk-logo">
+        .chessiitk
+      </span>
     </div>
     <nav class="header-nav">
       <a href="#" class="nav-tab">Home</a>
@@ -44,12 +47,14 @@
 </header>
 
     <main>
-      <!-- 3D King Model -->
-      <model-viewer src="/king.glb" alt="3D King Chess Piece"
-        camera-controls
-        auto-rotate
-        style="width: 300px; height: 300px; margin: 2rem auto; display: block; background: transparent;">
-      </model-viewer>
+       <!-- 3D Robot Model -->
+        <model-viewer 
+          src="/models/alphanight.glb" 
+          alt="3D Robot Model" 
+          camera-controls 
+          auto-rotate 
+          class="robot-model">
+        </model-viewer>
     </main>
   </div>
 
