bot sight of vision fixed

--- a/index.html
+++ b/index.html
@@ -47,19 +47,24 @@
 </header>
 
     <main>
+      <div class="content">
+        <div class="content-inner">
+          <h1 class="main-title">Welcome to Chess Club IIT Kanpur</h1>
+          <p class="main-description">Explore the world of chess with us. Join our community, participate in events, and learn more about the game.</p>
+          <a href="#" class="cta-button">Join Us</a>
+        </div>
+      </div>
        <!-- 3D Robot Model -->
         <model-viewer 
           src="/models/alphanight.glb" 
           alt="3D Robot Model" 
           camera-controls 
-          auto-rotate
-          rotation-per-second=".05deg"
           interaction-prompt="none"
           disable-zoom
           disable-pan
-          camera-orbit="0deg 70deg 4.3m" 
-          min-camera-orbit="0deg 70deg 1.0m"
-          max-camera-orbit="360deg 90deg 10.0m"
+          camera-orbit="53.4deg 70deg 4.3m" 
+          min-camera-orbit="-360000deg 80deg 1.0m"
+          max-camera-orbit="360000deg 90deg 10.0m"
           camera-target="0m 0.6m 0m"
           shadow-intensity="1.5"
           environment-image="neutral"
