--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <!-- Main Site Content -->
   <div id="site-content">
 
-   
-    <header>
+
+    <header >
       <div class="header-inner">
         <div class="logo-wrapper" style="margin-left:8px;">
           <span class="chessiitk-logo">
@@ -35,11 +35,11 @@
           </span>
         </div>
         <nav class="header-nav">
-          <a href="#" class="nav-tab">Home</a>
-          <a href="#" class="nav-tab">Events</a>
-          <a href="#" class="nav-tab">Team</a>
-          <a href="#" class="nav-tab">About</a>
-          <a href="#" class="nav-tab logo-tab">
+          <a href="index.html" class="nav-tab">Home</a>
+          <a href="events.html" class="nav-tab">Events</a>
+          <a href="team.html" class="nav-tab">Team</a>
+          <a href="about.html" class="nav-tab">About</a>
+          <a href="index.html" class="nav-tab logo-tab">
             <img src="/logo.png" alt="Logo" class="nav-logo-img" />
           </a>
         </nav>
@@ -47,9 +47,9 @@
     </header>
 
     <main>
-      <div class="content">
-        <div class="content-inner">
-          <h1 class="main-title">♟️ Welcome to the Chess Club, IIT Kanpur</h1>
+      <div class="content hidden-on-load">
+        <div class="content-inner hidden-on-load">
+          <h1 class="main-title text hidden-on-load">♟️ Welcome to the Chess Club, IIT Kanpur</h1>
 
           <div class="quote-container">
             <blockquote class="chess-quote">"When you see a good move, look for a better one." — Emanuel Lasker</blockquote>
