Some events added

--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Events - chessiitk</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
@@ -23,7 +23,6 @@
     header {
       background: #0D0907;
       padding: 18px 32px 36px 32px;
-      border-radius: 0 0 48px 48px;
       box-shadow: 0 12px 32px 0 rgba(0,0,0,0.45), 0 8px 0 0 #181a1b;
       position: relative;
       z-index: 20;
@@ -63,13 +62,15 @@
       color: #FBECCB;
       text-decoration: none;
       font-size: 1.15rem;
+      font-family: 'Poppins', sans-serif;
       font-weight: 600;
+      font-style: normal;
       letter-spacing: 1px;
       padding: 8px 18px;
       border-radius: 24px;
       transition: background 0.2s, color 0.2s;
-      height: 100px;
-      line-height: 100px;
+      height: 100px;               /* Match logo-wrapper height */
+      line-height: 100px;          /* Vertically center text */
       display: flex;
       align-items: center;
     }
